--- a/package.json
+++ b/package.json
@@ -6,17 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "plop": "plop",
+    "test": "vitest",
+    "prepare": "husky install",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "lint-staged": {
+      "*.{js, jsx, ts, tsx}": "eslint --cache --fix",
+      "*.{js, css, md}": "prettier --write"
+    }
   },
   "dependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.46.0",
+    "eslint": "^8.0.1",
     "eslint-config-next": "13.4.13",
+    "jsdom": "^22.1.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "*"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/ui": "^0.34.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "plop": "^3.1.2",
+    "prettier": "^3.0.1",
+    "sass": "^1.65.1",
+    "vitest": "^0.34.1"
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
