--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.13",
     "jsdom": "^22.1.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "typescript": "*"
   },
   "devDependencies": {
